--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -27,22 +27,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/bcgsc/pori_graphkb_python/blob/feature%2Fjupyter/docs/pori_graphkb_python_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rP6xlIsD79xj"
       },
       "source": [
         "# GraphKB Variant Matching Tutorial\n",
         "\n",
-        "This tutorial is an interactive notebook which can be run using ([google colab](https://colab.research.google.com/drive/1JnbK3Tm9f9XhuwUqvmbXReLGk_2GuaI4?usp=sharing)) or a local jupyter server (**reccommended** if matching patient data). This tutorial will cover basic matching of variants using the python GraphKB adaptor against an instance of the GraphKB API. \n",
+        "This tutorial is an interactive notebook which can be run using ([google colab](https://colab.research.google.com/github/bcgsc/pori_graphkb_python/blob/master/docs/pori_graphkb_python_tutorial.ipynb)) or a local jupyter server (**reccommended** if matching patient data). This tutorial will cover basic matching of variants using the python GraphKB adaptor against an instance of the GraphKB API. \n",
         "\n",
         "Users must first have login credentials to an instance of GraphKB API (or use the demo server). Note for users using the demo credentials and server, the data is limited and more complete annotations would be expected for a production instance of GraphKB.\n",
         "\n",
